# dgiLIT

./: .gitignore  README.md  __init__.py  indicator.py  literature.py  novel.py  pyproject.toml  score.py  search_set.py
data/: 2026-06-08-test1-BCL2-only.xlsx  2026-06-08-test1.xlsx  2026-06-29-test2-RohitList-wText.xlsx  2026-06-29-test2-RohitList.csv
notebooks/test_sets/test1_bcl2_dgidb/: .dgilit_normalizer_cache.sqlite  00_grab_literature.ipynb  01_wags_pretagging.ipynb  02_analysis.ipynb  2026-06-15-bcl2_fp_fn_manual_review.xlsx  2026-06-15-bcl2_interaction_recovery_review.xlsx  2026-06-16-bcl2_fp_fn_manual_review-mc.xlsx  2026-06-16-interaction_classifications-bcl2.csv  2026-06-16-interaction_classifications-bcl2.parquet
notebooks/test_sets/test2_curated_dgidb/: .dgilit_normalizer_cache.sqlite  01_wags_pretagging.ipynb  02_analysis.ipynb  2026-06-15-bcl2_fp_fn_manual_review.xlsx  2026-06-29-interaction_classifications-rohit.csv  2026-06-29-interaction_classifications-rohit.parquet
research/notebooks/: evaluation.ipynb  example-1.ipynb  example-2.ipynb  example-3.ipynb  example-4.ipynb  example-5.ipynb
research/notebooks/evaluation/: dgidb.py  (+9 more)
research/paper/: dgiLIT_Supplemental_Table_1.xlsx  dgiLIT_Supplemental_Table_2.xlsx  dgiLIT_Supplemental_Table_3.xlsx  dgiLIT_Supplemental_Table_4.xlsx
research/wags-llm/: 2026-06-08-interaction_predictions.csv  2026-06-29-test2-RohitList-wText.xlsx  analysis.ipynb  dgilit_models.py  grab_literature.ipynb  wags.ipynb
src/dgilit/: __init__.py
src/dgilit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+31 files in other folders)
