[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dgilit"
version = "0.1.0"
description = "AI-assisted literature prioritization and drug-gene interaction curation for DGIdb"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [
  { name = "Matthew Cannon" }
]
dependencies = [
  "polars",
  "pydantic",
  "tqdm",
  "wags-llm",
]

[tool.setuptools.packages.find]
where = ["src"]